Issue #1 fix: notelist icon alignment fix

--- a/app/private/styles/main.css
+++ b/app/private/styles/main.css
@@ -935,6 +935,15 @@ span.fancytree-title {
   cursor: pointer;
   margin-left: 5px;
 }
+.addnotes i.circular.icon {
+  padding: .6em .6em!important;
+  position: absolute;
+  margin-top: 4px;
+}
+.circleicon i.link.icon {
+  position: absolute;
+  margin-top: 6px;
+}
 .homeCard.ui.card {
   max-width: 100%;
   position: relative;
